# gaming

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_flags.txt  makefile
libraries/entt/: CMakeLists.txt  LICENSE  useless.cpp
libraries/imgui/: CMakeLists.txt
src/: CMakeLists.txt  game.hpp  main.cpp
src/Game/: Game.hpp
src/backend/dependencies/: glad.c
src/backend/dependencies/glad/: glad.h
src/backend/ecs/: Component.cpp  Component.hpp  Entity.cpp  Entity.hpp  Scene.cpp  Scene.hpp
src/backend/gfx/: Window.cpp  Window.hpp
src/components/imgui/: imgui_base.hpp  imgui_comp_impl.cpp  imgui_component.hpp  imgui_test.cpp
src/ecs/: Entity.cpp  Entity.hpp  Scene.cpp  Scene.hpp
src/gfx/: Window.cpp  Window.hpp
src/systems/: imguiSystem.cpp  imguiSystem.hpp
src/world/: overworld.cpp  overworld.hpp
